refactor: launch updated to ease launch on different cloud providers and machines size